--- a/Class1.ipynb
+++ b/Class1.ipynb
@@ -11,6 +11,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10245181858251584"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Function to calculate an european put option\n",
+    "\n",
+    "def put_option(S, K, r, sigma, T):\n",
+    "    from scipy.stats import norm\n",
+    "    from math import log, sqrt, exp\n",
+    "    d1 = (log(S/K) + (r + 0.5 * sigma ** 2) * T) / (sigma * sqrt(T))\n",
+    "    d2 = (log(S/K) + (r - 0.5 * sigma ** 2) * T) / (sigma * sqrt(T))\n",
+    "    return K * exp(-r * T) * norm.cdf(-d2) - S * norm.cdf(-d1)\n",
+    "\n",
+    "put_option(92, 88, 0.042, 0.1315, 0.063)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.33499203220596"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Function to calculate an european call option\n",
+    "\n",
+    "def call_option(S, K, r, sigma, T):\n",
+    "    from scipy.stats import norm\n",
+    "    from math import log, sqrt, exp\n",
+    "    d1 = (log(S/K) + (r + 0.5 * sigma ** 2) * T) / (sigma * sqrt(T))\n",
+    "    d2 = (log(S/K) + (r - 0.5 * sigma ** 2) * T) / (sigma * sqrt(T))\n",
+    "    return S * norm.cdf(d1) - K * exp(-r * T) * norm.cdf(d2)\n",
+    "\n",
+    "call_option(92, 88, 0.042, 0.1315, 0.063)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -33,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
